<resources>
    <string name="app_name">PostIt</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_create_event">Create your own Event</string>
    <string name="category_sports">Sports</string>
    <string name="category_board_games">Board Games</string>
    <string name="category_eat">Eat</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_clubbing">Clubbing</string>
    <string name="category_others">Others</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="image_card_view_default_text">Example</string>
    <string name="prompt_default">Placeholder</string>
    <string name="title_hint">Event Title</string>
    <string name="category_hint">Category</string>
    <string name="date_hint">Date DD/MM/YYYY</string>
    <string name="time_hint">Time HH:MM</string>
    <string name="location_hint">Meet-up Location</string>
    <string name="descrip_hint">Event Description</string>
    <string name="attendees_hint">Max Attendees (Optional)</string>
    <string name="image_change_text">Click on the image to change it</string>
    <string name="default_event_image_url">https://tmesystems.net/wp-content/uploads/2018/05/sutd-logo-300x180.jpg</string>

    <string name="save_event_button">Create &amp; Publish Event</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_time">Invalid Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_events">Find Events Near You</string>

    <string name="title_view_events">Some title</string>
    <string name="next_btn">Next</string>
    <string name="add_your_favourite_actvities">Add Your Favourite Actvities</string>
    <string name="add_a_profile_picture">Add A Profile Picture</string>
    <string name="to_your_personalised_profile">To Your Personalised Profile</string>
    <string name="open_telegram_group">Join This Event</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="category_food">Food</string>
    <string name="category_music">Music</string>


</resources>
