<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".createevent.ChooseCategoryFragment">
    <ScrollView
            android:id="@+id/event_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_event_button">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="@dimen/create_event_layout_padding"
                android:paddingRight="@dimen/create_event_layout_padding">

            <EditText
                    android:id="@+id/event_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:textSize="@dimen/event_title_size"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:singleLine="true"/>


            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:paddingLeft="@dimen/create_event_image_padding"
                    android:paddingRight="@dimen/create_event_image_padding"
                    android:paddingTop="@dimen/create_event_image_padding"
                    android:paddingBottom="@dimen/create_event_image_padding"
                    android:src="@drawable/sutd_logo"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/image_change_text"
                    android:textAlignment="center"
            />

            <com.example.postit.createevent.EventDetailRowView
                    android:id="@+id/event_category_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowField="@string/category_hint"
                    app:rowImage="@drawable/ic_category_24px"
                    android:orientation="horizontal"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                <com.example.postit.createevent.EventDetailRowView
                        android:id="@+id/event_date_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rowField="@string/date_hint"
                        app:rowImage="@drawable/ic_cal_24"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                </com.example.postit.createevent.EventDetailRowView>
                <com.example.postit.createevent.EventDetailRowView
                        android:id="@+id/event_time_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:rowField="@string/time_hint"
                        app:rowImage="@drawable/ic_access_time_24px"
                        android:orientation="horizontal">

                </com.example.postit.createevent.EventDetailRowView>
            </LinearLayout>

            <com.example.postit.createevent.EventDetailRowView
                    android:id="@+id/event_location_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowField="@string/location_hint"
                    app:rowImage="@drawable/ic_location_pin"
                    android:orientation="horizontal"/>

            <com.example.postit.createevent.EventDetailRowView
                    android:id="@+id/event_descrip_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowField="@string/descrip_hint"
                    app:rowImage="@drawable/ic_description_24px"
                    android:orientation="horizontal"/>

            <com.example.postit.createevent.EventDetailRowView
                    android:id="@+id/event_max_ppl_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowField="@string/attendees_hint"
                    app:rowImage="@drawable/ic_people_24px"
                    app:onlyNumberInput="true"
                    android:orientation="horizontal"/>

        </LinearLayout>
    </ScrollView>
    <TextView
            android:id="@+id/create_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_event_button"
            android:background="@color/colorCreateEventButton"
            android:textAlignment="center"
            android:textColor="@color/colorCreateEventButtonText"
            android:textSize="@dimen/create_event_button_font_size"
            android:textStyle="bold"
            android:paddingTop="@dimen/create_event_button_padding_vertical"
            android:paddingBottom="@dimen/create_event_button_padding_vertical"
            app:layout_constraintTop_toBottomOf="@id/event_scrollview"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>